# lobbywatch-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.govsearch  ENHANCED_FEATURES.md  FUTURE_IDEAS.md  GITHUB_SECRETS_REQUIRED.md  LDA_REAL_API_INTEGRATION.md  LDA_V1_FINAL_SUMMARY.md  LDA_V1_MVP_SUMMARY.md  LDA_V1_PRODUCTION_COMPLETE.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  README_V2.md  SECURITY_CLEANUP.md  URGENT_SECURITY_ACTIONS.md  docker-compose.govsearch.yml  example_digest_output.md  fix_line_length.py  fix_line_length_final.py  fix_unused_imports.py  main.py  pyproject.toml  railway.json  setup.cfg  setup_railway.py  test_api_simple.py  test_digest_preview.py  test_dm_alerts.py  test_fr_digest.py  test_fr_digest_fixture.py  test_lda_full.py  test_utils.py
.github/workflows/: daily.yml  lda-quarterly.yml  test.yml  weekly-collector.yml
bot/: __init__.py  alerts.py  api.py  config.py  daily_signals.py  daily_signals_cli.py  daily_signals_v2.py  database.py  database_postgres.py  digest.py  digest_v2.py  enhanced_digest.py  enhanced_run.py  fr_digest.py  lda_digest.py  lda_etl.py  lda_front_page_digest.py  lda_issue_codes.py  lda_scheduler.py  matching.py  permissions.py  run.py  run_v2.py  signals.py  signals_database.py  signals_database_v2.py  signals_digest.py  signals_v2.py  slack_app.py  test_fixtures_v2.py  utils.py  web_server.py  web_server_v2.py
bot/notifiers/: __init__.py  base.py  email.py  slack.py
docs/: EMAIL_SETUP.md  FUTURE_IDEAS.md  IMPROVEMENTS.md  LDA_OVERVIEW.md  OPERATIONS_GUIDE.md  SECURITY.md  SECURITY_CLEANUP.md  SECURITY_FIXES.md  TECHNICAL_DEBT.md  TEST_COVERAGE.md  TEST_SUMMARY.md  URGENT_SECURITY_ACTIONS.md
govsearch/: __init__.py  cli.py  config.py  db.py
govsearch/api/: __init__.py  app.py
govsearch/indexer/: __init__.py  backfill.py  core.py  incremental.py  models.py
govsearch/ui/: app.py
scripts/: __init__.py  daily-digest.py  get-slack-user-id.py  lda-cli.py  preview_local_digest.py  sync_signals_from_postgres.py  validate-deployment.py  verify-setup.py
scripts/maintenance/: daily-digest.py  lda-cli.py  preview_local_digest.py  sync_signals_from_postgres.py  validate-deployment.py
scripts/security/: remove-sensitive-credentials.py  rotation-checklist.py
tests/: __init__.py  conftest.py  slack_stubs.py  test_api.py  test_api_endpoints_smoke.py  test_api_failure_modes.py  test_config.py  test_daily_digest_format.py  test_daily_signals.py  test_daily_signals_unit.py  test_daily_signals_v2.py  test_database_postgres.py  test_digest.py  test_digest_basic.py  test_digest_formatter_links.py  test_digest_formatting.py  test_digest_html.py  test_digest_links.py  test_digest_sections.py  test_digest_v2.py  test_dm_alerts.py  test_enhanced_digest.py  test_enhanced_run.py  test_enhanced_run_additional.py  test_etl.py  test_fr_digest_outlier.py  test_lda_front_page_digest.py  test_lda_full.py  test_lda_scheduler.py  test_lda_scheduler_additional.py  test_matching.py  test_matching_extended.py  test_notifiers.py  test_notifiers_email.py  test_permissions.py  test_permissions_extended.py  test_run.py  test_run_extended.py  test_run_notifier_selection.py  test_run_v2.py  (+20 more)
