[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobbylens"
version = "0.1.0"
description = "Daily lobbying activity digest bot"
authors = [
    {name = "LobbyLens Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "python-dateutil>=2.9",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "flask>=3.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "requests-mock>=1.11",
    "httpx>=0.24",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "types-requests>=2.32",
    "types-pytz>=2023.3",
]

[project.scripts]
lobbylens = "bot.run:main"
lobbylens-enhanced = "bot.enhanced_run:main"
lobbylens-signals = "bot.daily_signals_cli:main"
govsearch = "govsearch.cli:main"

[tool.setuptools.packages.find]
include = ["bot*", "govsearch*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = "scripts/maintenance/preview_local_digest.py,scripts/maintenance/sync_signals_from_postgres.py,test_digest_preview.py,tests/test_daily_digest_format.py"
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=bot --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["bot"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
